[gd_scene load_steps=3 format=2]

[ext_resource path="res://challenges/week14/scenes/card/card.gd" type="Script" id=1]
[ext_resource path="res://common/gfx/spanish_playing_cards/club_1.webp" type="Texture" id=2]

[node name="card" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="card_area" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="card_area"]
polygon = PoolVector2Array( -73, -120, 75, -120, 82, -115, 87, -108, 87, 105, 82, 115, 73, 120, -73, 120, -83, 114, -86, 108, -86, -109, -81, -117 )

[connection signal="input_event" from="card_area" to="." method="_on_card_area_input_event"]
[connection signal="mouse_entered" from="card_area" to="." method="_on_card_area_mouse_entered"]
[connection signal="mouse_exited" from="card_area" to="." method="_on_card_area_mouse_exited"]
